added service layer

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
             <version>6.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/at.favre.lib/bcrypt -->
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.10.1</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.jspecify/jspecify -->
         <dependency>
             <groupId>org.jspecify</groupId>
@@ -119,7 +126,7 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>3.1.0</version>
+            <version>3.0.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
