--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>bcrypt</artifactId>
             <version>0.10.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.jspecify/jspecify -->
         <dependency>
             <groupId>org.jspecify</groupId>
