--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ db.url=jdbc:mysql://localhost:3306/socialmedia
 db.username=root
 db.password=root
 db.driver=com.mysql.cj.jdbc.Driver
+
+# File upload properties
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
