--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <junit.version>5.11.0</junit.version>
     </properties>
 
+
+
     <dependencies>
         <dependency>
             <groupId>jakarta.servlet</groupId>
@@ -25,7 +27,18 @@
             <version>6.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.18.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/at.favre.lib/bcrypt -->
         <dependency>
             <groupId>at.favre.lib</groupId>
